--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.11",
+    "@hookform/resolvers": "^5.1.1",
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-query-devtools": "^5.81.5",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.19.2",
     "jose": "^6.0.11",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "zod": "^3.25.67",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
